<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="hello">Hello World!</string>
    <string name="app_name">Together</string>
    <string name="Username">Email</string>
    <string name="Emailsuffix">"@dartmouth.edu"</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="RegisterBtn">Register Now!</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="signup">Sign Up</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyDt01x2a1UhkykWGXHjnmaS-wODxmk4T0k</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_detected">\"no location detected\"</string>
    <color name="bg_color">#ffffff</color>
    <string name="sendemail">Sign Up</string>
    <string name="title_activity_navigation">StudyEDU</string>
    <string name="CreateGroupBtn">Create a Study Group</string>
    <string name="verificationcodetxt">Enter the Verification Code We Sent You</string>


    <string name="title_section1">Help Me!</string>
    <string name="title_section2">My Posts</string>
    <string name="title_section3">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="button_label">Submit</string>

    <string name="select">Choose a department</string>
    <string name="select2">Choose a class</string>

    <string name="hello_world">Hello world!</string>


    <string name="toggle">Toggle View</string>

    <!-- Below are the string arrays that were newly requested -->

    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="am_or_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="num_peers">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string name="title_activity_spinners_menu">SpinnersMenu</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
