<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="10dip">

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/Username"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:textColor="#000000"
        android:inputType="text"/>

    <TextView
        android:id="@+id/emailsuffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_below="@+id/txtusername"

        android:layout_toRightOf="@+id/username"
        android:layout_alignParentRight="true"
        android:text="@string/Emailsuffix"/>

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:gravity="bottom"
        android:textColor="#000000"
        android:text="@string/Password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:textColor="#000000"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/LoginBtn"/>

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="@string/RegisterBtn"/>
</RelativeLayout>